<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0    http://maven.apache.org/xsd/maven-4.0.0.xsd"><modelVersion>4.0.0</modelVersion><groupId>com.momomo</groupId><artifactId>momomo.com.platform.Nanotime</artifactId><version>5.0.2</version><packaging>jar</packaging><name>momomo.com.platform.Nanotime</name><properties><project.build.sourceEncoding>UTF-8</project.build.sourceEncoding><project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding><maven.compiler.source>15</maven.compiler.source><maven.compiler.target>15</maven.compiler.target><skipTests>true</skipTests><maven.test.skip>true</maven.test.skip><mmm_pom_java_home>${java.home}</mmm_pom_java_home><private_mmm_pom_module_path>${project.basedir}/</private_mmm_pom_module_path><private_mmm_pom_module_path_sibling>${project.basedir}</private_mmm_pom_module_path_sibling><private_mmm_pom_module_type>${project.packaging}</private_mmm_pom_module_type><private_mmm_pom_module_name>${project.artifactId}</private_mmm_pom_module_name><private_mmm_pom_module_target>${project.build.directory}/</private_mmm_pom_module_target><mmm_pom_src_name>src</mmm_pom_src_name><private_mmm_pom_src_path>${private_mmm_pom_module_path}${mmm_pom_src_name}/</private_mmm_pom_src_path><private_mmm_pom_test_name>test</private_mmm_pom_test_name><private_mmm_pom_test_path>${private_mmm_pom_module_path}${private_mmm_pom_test_name}/</private_mmm_pom_test_path><private_mmm_pom_resources_name>resources</private_mmm_pom_resources_name><private_mmm_pom_resources_path>${private_mmm_pom_module_path}${private_mmm_pom_resources_name}/</private_mmm_pom_resources_path><private_mmm_pom_jars_name>jars</private_mmm_pom_jars_name><private_mmm_pom_jars_path>${private_mmm_pom_module_path}${private_mmm_pom_jars_name}/</private_mmm_pom_jars_path><private_mmm_pom_assets_name>assets</private_mmm_pom_assets_name><private_mmm_pom_assets_path>${private_mmm_pom_module_path}${private_mmm_pom_assets_name}/</private_mmm_pom_assets_path><private_mmm_pom_generated_name>${mmm_pom_src_name}</private_mmm_pom_generated_name><private_mmm_pom_generated_path>${private_mmm_pom_module_path}${private_mmm_pom_generated_name}/</private_mmm_pom_generated_path><private_mmm_pom_scripts_name>scripts</private_mmm_pom_scripts_name><private_mmm_pom_scripts_path>${private_mmm_pom_module_path}${private_mmm_pom_scripts_name}/</private_mmm_pom_scripts_path><private_mmm_pom_webinf_name>WEB-INF</private_mmm_pom_webinf_name><private_mmm_pom_webinf_target_classes_name>classes</private_mmm_pom_webinf_target_classes_name><private_mmm_pom_module_target_src>${private_mmm_pom_module_target}${private_mmm_pom_webinf_name}/${private_mmm_pom_webinf_target_classes_name}/</private_mmm_pom_module_target_src><private_mmm_pom_module_target_test>${private_mmm_pom_module_target}${private_mmm_pom_webinf_name}/${private_mmm_pom_webinf_target_classes_name}/</private_mmm_pom_module_target_test><private_mmm_pom_module_target_jars>${private_mmm_pom_module_target}${private_mmm_pom_webinf_name}/${private_mmm_pom_webinf_target_classes_name}/</private_mmm_pom_module_target_jars><mmm_pom_dependency_guava_version>28.2-jre</mmm_pom_dependency_guava_version><mmm_pom_dependency_spring_version>4.0.6.RELEASE</mmm_pom_dependency_spring_version><mmm_pom_dependency_spring_version>5.2.8.RELEASE</mmm_pom_dependency_spring_version></properties><build><sourceDirectory>${mmm_pom_src_name}</sourceDirectory><testSourceDirectory>${private_mmm_pom_test_name}</testSourceDirectory><outputDirectory>${private_mmm_pom_module_target_src}</outputDirectory><testOutputDirectory>${private_mmm_pom_module_target_test}</testOutputDirectory><resources><resource><directory>${private_mmm_pom_assets_name}</directory><targetPath>${private_mmm_pom_assets_name}</targetPath></resource><resource><directory>${private_mmm_pom_resources_name}</directory></resource></resources><plugins><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><version>3.8.1</version><inherited>true</inherited><configuration><useIncrementalCompilation>false</useIncrementalCompilation><compilerReuseStrategy>alwaysNew</compilerReuseStrategy><showWarnings>false</showWarnings><meminitial>1024</meminitial><failOnError>true</failOnError><failOnWarning>false</failOnWarning><compilerArgs><arg>--add-exports</arg><arg>java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED</arg></compilerArgs></configuration></plugin><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-jar-plugin</artifactId><version>3.2.0</version><configuration><archive><manifest><addClasspath>true</addClasspath><classpathLayoutType>repository</classpathLayoutType><classpathPrefix>${settings.localRepository}</classpathPrefix></manifest></archive></configuration><executions><execution><goals><goal>test-jar</goal></goals></execution></executions></plugin><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-surefire-plugin</artifactId><version>3.0.0-M4</version></plugin><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-install-plugin</artifactId><version>3.0.0-M1</version></plugin><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-resources-plugin</artifactId><version>3.1.0</version></plugin><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-clean-plugin</artifactId><version>3.1.0</version></plugin><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-dependency-plugin</artifactId><version>3.1.1</version></plugin></plugins></build><dependencies><dependency><groupId>com.momomo</groupId><artifactId>momomo.com.platform.Lambda</artifactId><version>5.0.2</version></dependency><dependency><groupId>log4j</groupId><artifactId>log4j</artifactId><version>1.2.17</version></dependency><dependency><groupId>org.slf4j</groupId><artifactId>slf4j-api</artifactId><version>1.7.30</version></dependency><dependency><groupId>org.slf4j</groupId><artifactId>slf4j-log4j12</artifactId><version>1.7.30</version></dependency><dependency><groupId>org.slf4j</groupId><artifactId>jcl-over-slf4j</artifactId><version>1.7.30</version></dependency></dependencies><profiles><profile><id>mmm_pom_profile_sonatype</id><distributionManagement><repository><id>mmm_pom_repository_sonatype</id><url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url></repository><snapshotRepository><id>mmm_pom_repository_sonatype_snapshots</id><url>https://oss.sonatype.org/content/repositories/snapshots</url></snapshotRepository></distributionManagement><properties><gpg.passphraseServerId>opensource@momomo.com</gpg.passphraseServerId><gpg.defaultKeyring>false</gpg.defaultKeyring></properties><build><plugins><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-source-plugin</artifactId><version>3.2.0</version><executions><execution><id>attach-sources</id><phase>verify</phase><goals><goal>jar-no-fork</goal></goals></execution></executions></plugin><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-gpg-plugin</artifactId><version>1.6</version><executions><execution><id>sign-artifacts</id><phase>verify</phase><goals><goal>sign</goal></goals></execution></executions></plugin><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-jar-plugin</artifactId><version>3.2.0</version><configuration><excludes><exclude>**/rebel.xml</exclude></excludes></configuration></plugin><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-javadoc-plugin</artifactId><version>3.2.0</version><executions><execution><id>attach-javadocs</id><goals><goal>jar</goal></goals><configuration><show>private</show><failOnError>false</failOnError><detectOfflineLinks>false</detectOfflineLinks><doclint>all,-missing</doclint><nohelp>true</nohelp><excludePackageNames>momomo.*</excludePackageNames><quiet>true</quiet></configuration></execution></executions></plugin></plugins></build></profile></profiles><scm><tag>HEAD</tag><url>https://github.com/momomo/momomo.com.platform.Nanotime</url><connection>scm:git:https://github.com/momomo/momomo.com.platform.Nanotime.git</connection><developerConnection>scm:git:ssh://github.com/momomo/momomo.com.platform.Nanotime.git</developerConnection></scm><licenses><license><name>MoL1 License</name><url>https://raw.githubusercontent.com/momomo/momomo.com.yz.licenses/HEAD/MoL1</url><distribution>repo</distribution></license></licenses><repositories><repository><id>maven-central</id><url>http://repo1.maven.org/maven2</url></repository></repositories><developers><developer><name>momomo</name><email>opensource@momomo.com</email><organization>Momomo LTD</organization><organizationUrl>https://coming.soon.momomo.com</organizationUrl></developer></developers><description>Allows for nanosecond time resolution when asking for time from Java Runtime in contrast with System.currentTimeMillis().</description><url>https://github.com/momomo</url></project>